<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="my_email">david20506@yandex.ru</string>
    <string name="dev_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="dev_message2">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="android_developer">https://practicum.yandex.ru/android-developer</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer</string>
    <string name="mail_to">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="smells_like">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="billie_jean">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="stayin_alive">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="whole_lotta">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="sweet_child">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="connection_lost">Проблемы со связью</string>
    <string name="refresh">Обновить</string>
    <string name="history_clear_button">Очистить историю</string>
    <string name="searched">Вы искали</string>
    <string name="track_length">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="to_create">Создать</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_name">Название*</string>
    <string name="track_added">Трек добавлен в плейлист</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="myalbum">myAlbum</string>
    <string name="playlistpicture_jpg">PlaylistPicture.jpg</string>
    <string name="ending_create_playlist">Завершить создание плейлиста?</string>
    <string name="all_data_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="delete_track">Удалить трек</string>
    <string name="shure_to_delete">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="to_share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="to_edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист %1$s</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>

    <plurals name="track_postfix">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_postfix">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>