<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_16dp"
    android:paddingRight="@dimen/_16dp"
    android:paddingBottom="@dimen/_16dp"
    tools:context=".main.ui.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="@dimen/_16dp"
        android:paddingBottom="@dimen/_16dp"
        android:text="@string/app_name"
        android:textColor="@color/dn_white"
        android:textSize="@dimen/t_size_22" />

    <Button
        android:id="@+id/search"
        style="@style/MainButton"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/library"
        style="@style/MainButton"
        android:text="@string/library"
        app:icon="@drawable/library" />

    <Button
        android:id="@+id/settings"
        style="@style/MainButton"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>