<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/s_medium_padding">

        <ImageView
            android:id="@+id/backArrowImageView"
            style="@style/backButton" />

        <TextView
            style="@style/titleTextView"
            android:text="@string/settings" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:saveEnabled="false"
        android:text="@string/black_theme"
        android:textSize="@dimen/t_size_16"
        app:thumbTint="@color/switch_Thumb"
        app:trackTint="@color/switch_Track"/>

    <Button
        android:id="@+id/share"
        style="@style/SettingsButton"
        android:text="@string/share"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/support"
        style="@style/SettingsButton"
        android:text="@string/support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/agreement"
        style="@style/SettingsButton"
        android:text="@string/agreement"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>

