<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:paddingBottom="20dp"/>

    <Button
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:cornerRadius="32dp"
        app:iconTint="#000000"
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#ffffff"
        android:text="@string/search"
        android:textSize="20sp"
        android:textColor="#1A1B22" />

    <Button
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:cornerRadius="32dp"
        app:iconTint="#000000"
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#ffffff"
        android:text="@string/library"
        android:textSize="20sp"
        android:textColor="#1A1B22" />

    <Button
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:cornerRadius="32dp"
        app:iconTint="#000000"
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#ffffff"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textColor="#1A1B22" />

</LinearLayout>