<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/yp_black"
    tools:context=".library.ui.NewPlaylistFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/title"
            style="@style/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="@dimen/_48dp"
            android:gravity="center_vertical"
            android:text="@string/new_playlist" />

    </LinearLayout>

    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_312dp"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/rounded_stroke_rectangle"
        app:layout_constraintBottom_toTopOf="@id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:scaleType="centerInside"
        android:src="@drawable/new_playlist_placeholder"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@id/edit_description"
        app:layout_constraintTop_toBottomOf="@id/placeholder"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_playlist_name" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_description"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_description_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_playlist_description" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44dp"
        android:layout_margin="@dimen/_16dp"
        android:background="@drawable/create_button_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/to_create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/t_size_16"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>