<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.PlayerActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16dp" />

        <ImageView
            android:id="@+id/backButton"
            style="@style/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/artwork"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_8dp"
            android:layout_marginTop="26dp"
            app:layout_constraintBottom_toTopOf="@id/trackName"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            tools:src="@drawable/placeholder312" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/t_size_22"
            app:layout_constraintBottom_toTopOf="@id/artistName"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artwork"
            tools:text="Track name"

            />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/size_14sp"
            app:layout_constraintBottom_toTopOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="Collection name" />

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38dp"
            android:src="@drawable/play_button"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/playTime"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />


        <ImageView
            android:id="@+id/addToCollectionButton"
            style="@style/add_to_collection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageView
            android:id="@+id/addToFavoritesButton"
            style="@style/add_to_favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <TextView
            android:id="@+id/playTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintBottom_toTopOf="@id/lengthW"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            tools:text="0:30" />

        <TextView
            android:id="@+id/lengthW"
            style="@style/player_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/track_length"
            app:layout_constraintBottom_toTopOf="@id/collectionNameN"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/collectionNameN"
            style="@style/player_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/track_album"
            app:layout_constraintBottom_toTopOf="@id/yearN"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/lengthW" />

        <TextView
            android:id="@+id/yearN"
            style="@style/player_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/track_year"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/collectionNameN" />

        <TextView
            android:id="@+id/genre"
            style="@style/player_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/track_genre"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/yearN" />

        <TextView
            android:id="@+id/country"
            style="@style/player_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/track_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/lengthD"
            style="@style/player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/collectionNameV"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            tools:text="5:00" />

        <TextView
            android:id="@+id/collectionNameV"
            style="@style/player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/yearV"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/lengthD"
            app:layout_constraintWidth_max="@dimen/_200dp"
            tools:text="Collection name" />

        <TextView
            android:id="@+id/yearV"
            style="@style/player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintBottom_toTopOf="@id/genreV"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/collectionNameV"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreV"
            style="@style/player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintBottom_toTopOf="@id/countryV"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/yearV"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countryV"
            style="@style/player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/padding_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintTop_toBottomOf="@id/genreV"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:src="@drawable/rectangle_1457"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:textSize="@dimen/size_19sp"
            android:textColor="@color/yp_black"
            android:text="Добавить в плейлист"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/create_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_24dp"
            android:backgroundTint="@color/yp_black"
            android:baselineAligned="false"
            android:paddingHorizontal="@dimen/_14dp"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14sp"
            app:cornerRadius="@dimen/radius_54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>